syntax = "proto3";


package player;

import "offer.proto";

//option java_outer_classname = "PlayerOuterClass";
option java_package = "org.example.apigateway.grpc.player";

service Player{
    rpc GetPlayer(GetPlayerRequest) returns (GetPlayerResponse) {}
    rpc CreatePlayer(CreatePlayerRequest) returns (CreatePlayerResponse) {}
    rpc UpdatePlayer(UpdatePlayerRequest) returns (UpdatePlayerResponse) {}
    rpc DeletePlayer(DeletePlayerRequest) returns (DeletePlayerResponse) {}
    rpc GetPlayers(GetPlayersRequest) returns (GetPlayersResponse) {}
    rpc GetOffersByPlayer(GetOffersByPlayerRequest) returns (GetOffersByPlayerResponse) {}
    rpc GetRecommendedOffer(GetPlayerRequest) returns (offer.OfferItem) {}
}

message GetPlayerRequest {
    string id = 1;
}

message GetPlayerResponse {
    PlayerItem player = 1;
}

message CreatePlayerRequest {
    PlayerItem player = 1;
}

message CreatePlayerResponse {
    PlayerItem player = 1;
}

message UpdatePlayerRequest {
    PlayerItem player = 1;
}

message UpdatePlayerResponse {
    PlayerItem player = 1;
}

message DeletePlayerRequest {
    string id = 1;
}

message DeletePlayerResponse {
    string id = 1;
}

message GetPlayersRequest {
    string team_id = 1;
    int32 page = 2;
    int32 limit = 3;
}

message GetPlayersResponse {
    repeated PlayerItem players = 1;
}

message GetOffersByPlayerRequest {
    string player_id = 1;
}

message GetOffersByPlayerResponse {
    repeated offer.OfferItem offers = 1;
}

message PlayerItem {
    string id = 1;
    string name = 2;
    string age = 3;
    string photo = 4;
    string nationality = 5;
    string flag = 6;
    int32 overall = 7;
    int32 potential = 8;
    string position = 9;
    int32 value = 10;
    int32 wage = 11;
    string preferred_foot = 12;
    string work_rate = 13;
    string body_type = 14;
    string international_reputation = 15;
    string skill_moves = 16;
    string weak_foot = 17;
    int32 height = 18;
    int32 weight = 19;
    string offer = 20;
}