syntax = "proto3";




package team;

option java_outer_classname = "TeamOuterClass";
option java_package = "org.example.apigateway.grpc.team";


service Team {
    rpc CreateTeam(CreateTeamRequest) returns (CreateTeamResponse) {}
    rpc GetTeam(GetTeamRequest) returns (GetTeamResponse) {}
    rpc UpdateTeam(UpdateTeamRequest) returns (UpdateTeamResponse) {}
    rpc DeleteTeam(DeleteTeamRequest) returns (DeleteTeamResponse) {}
    rpc GetTeams(GetTeamsRequest) returns (GetTeamsResponse) {}
}

message CreateTeamRequest {
    string name = 1;
    string description = 2;
    string owner = 3;
    string team_logo = 4;
    repeated string players_id= 5;
}

message CreateTeamResponse {
    string id = 1;
}

message GetTeamRequest {
    string id = 1;
}

message GetTeamResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    string owner = 4;
}

message UpdateTeamRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    string owner = 4;
}

message UpdateTeamResponse {
    string id = 1;
}

message DeleteTeamRequest {
    string id = 1;
}

message DeleteTeamResponse {
    string id = 1;
}

message GetTeamsRequest {
    string owner = 1;
}

message GetTeamsResponse {
    repeated TeamItem teams = 1;
}

message TeamItem {
    string id = 1;
    string name = 2;
    string description = 3;
    string owner = 4;
}